0.7.0
 - feat: implement download manager
0.6.4
 - enh: automatically respwan job tasks on connection errors (#26)
 - enh: allow to abort the "compress" step of a job
 - enh: when loading upload tasks that have already been loaded
   before, tell the user how many there were
0.6.3
 - setup: bump dclab from 0.35.0 to 0.35.3
0.6.2
 - enh: show correct upload speed if some resources were uploaded in
   a previous session
 - fix: set job.state to "error" if the daemon encountered one
 - fix: catch ConnectionError in update_job_status
0.6.1
 - fix: handle exceptions in Daemon threads
 - fix: display all resources of a dataset for which the SHA256
   check failed (opposed to just the first)
 - setup: bump dclab from 0.34.6 to 0.35.0
0.6.0
 - feat: search and browse public data on a DCOR instance
 - feat: drag resources in data browser to Shape-Out 2.7.0
   (partially #1)
 - setup: bump dclab from 0.34.4 to 0.34.6
0.5.11
 - fix: KeyError when checking for existence of resource (#24)
 - enh: drag&drop files to manual upload dialog (#23)
 - enh: set upload rate refresh interval to >3s (#22)
 - enh: permit to only update resource schema supplements when
   executing `dataset.add_resource` with `exist_ok=True`
0.5.10
 - fix: removed confusing wait-cursor during circle selection
 - fix: manual upload dialog was shown even though user pressed
   cancel on circle creation (#20)
 - fix: silenced very long error message about connection errors
   in the background thread that refreshes the login status
 - tests: add complementary tests for upload queue and persistent job
   list
0.5.9
 - fix: TypeError when attempting a manual upload when the user did not
   have a circle set-up (#17)
 - fix: manual uploads were not added to persistent job list
0.5.8
 - fix: introduce LocalTaskResourcesNotFoundError in upload.task
   which results in a custom DCORAidQueueWarning in upload.queue
   in case a dataset resource is not available at the moment;