@@ -1,5 +1,6 @@
 0.7.0
  - feat: implement download manager
+ - enh: allow to download all resources of a collection (#13)
 0.6.4
  - enh: automatically respwan job tasks on connection errors (#26)
  - enh: allow to abort the "compress" step of a job
